# kylea

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.dev  Dockerfile.local  Dockerfile.travis  README.md  build_and_run_container.sh  build_test.sh  run_client.sh  run_container.sh
proto/: .gitignore  CMakeLists.txt  auth.proto
scripts/: build_kylea.sh  run_client_server.sh  run_server.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/http_client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  cert.pem  key.pem  main.cpp
src/utils/: CMakeLists.txt
src/utils/BufferProvider/: CMakeLists.txt
src/utils/BufferProvider/include/: Buffer.h  BufferLock.h  BufferLockPtr.h  BufferProvider.h  BufferProviderPtr.h  BufferPtr.h
src/utils/BufferProvider/src/: Buffer.cpp  BufferProvider.cpp
src/utils/Misc/: CMakeLists.txt
src/utils/Misc/include/: RandomNumberGenerator.hpp  SharedCreator.hpp  ThreadPool.h  Timer.cpp  Timer.h
src/utils/Net/: CMakeLists.txt
src/utils/Net/include/: Client.hpp  ClientHTTPSession.hpp  Handler.hpp  HandlerMapper.hpp  HandlerMapperCreateFunction.hpp  HandlerMapperPtr.hpp  HandlerPtr.hpp  Message.hpp  MessagePtr.hpp  MessageTypes.hpp  MetaMessage.hpp  MetaMessagePtr.hpp  Server.hpp  Session.hpp  SessionInterface.hpp  SessionInterfacePtr.hpp  SessionManager.hpp  SessionPtr.hpp
src/utils/Net/src/: Client.cpp  ClientHTTPSession.cpp  Message.cpp  MetaMessage.cpp  Server.cpp  Session.cpp  SessionManager.cpp
src/utils/SharedCreator/: CMakeLists.txt
test/: CMakeLists.txt
